# QCVAggregation

./: .gitignore  CMakeLists.txt
AggregatorCore/: CMakeLists.txt
AggregatorCore/headers/: CV.h  DataHandler.h  Hash.h  Seniority.h  Serializable.h  stdafx.h
AggregatorCore/src/: Hash.cpp  Seniority.cpp
headers/: pLACEHOLDER.h  stdafx.h
src/: pLACEHOLDER.cpp
tests/: CMakeLists.txt  test.cpp
